Revert "Fix Dialog having a scrollbar when height: 100% is used (#5510)" (#5619)

--- a/packages/core/src/dialog/DialogContent.css
+++ b/packages/core/src/dialog/DialogContent.css
@@ -14,7 +14,6 @@
 }
 
 .saltDialogContent-inner {
-  display: flex;
   overflow-y: auto;
   border-top: var(--salt-size-fixed-100) var(--salt-borderStyle-solid) transparent;
   border-bottom: var(--salt-size-fixed-100) var(--salt-borderStyle-solid) transparent;
